--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,3 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+h1,
+h2,
+h3 {
+  color: rgb(88, 82, 82);
+}
+
+@import "./player";
+@import "./song";
