--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -7,6 +7,10 @@
   background-color: white;
   box-shadow: 2px 2px 50px rgb(207, 205, 205);
   overflow: scroll;
+  transform: translateX(-100%);
+  transition: all 0.5s ease;
+  opacity: 0;
+
   h2 {
     padding: 2rem;
   }
@@ -53,4 +57,9 @@
 
 .selected {
   background: rgb(157, 147, 248)
+}
+
+.active-library {
+  transform: translateX(0%);
+  opacity: 1;
 }
